This is for adding design to website

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Hello Duniya!</h1>
     <br>
-    <p>This is my first website</p>
+    <p>This is my first design website</p>
 </body>
 </html>
